service StateService {
  rpc GetState(DialogueId) returns (State) {}
  rpc AddState(State) returns (StateSuccess) {}
  rpc DeleteFile(State) returns (StateSuccess) {}
}

message State {
  required string state = 1;
}

message DialogueId {
  required string id = 1;
}

message StateSuccess {
  required  int32 code = 1;
}